--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:h2:mem:testdb;DATABASE_TO_UPPER=false
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=sa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
